# pystrict

./: LICENSE  README.md  pyproject.toml
pystrict/: __init__.py  behavior.py  interface.py  structure.py  visibility.py
pystrict.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
